TestRepo2/src/objects/Recipe_Attribute__c.object
<CustomObject>
    <fields>
        <fullName>Attribute_Value__c</fullName>
        <formula>Attribute__r.Name</formula>
        <label>Attribute Value</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attribute__c</fullName>
        <label>Attribute</label>
        <referenceTo>Attribute__c</referenceTo>
        <relationshipLabel>Recipe Attributes</relationshipLabel>
        <relationshipName>Recipe_Attributes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Dynamic_Value__c</fullName>
        <label>Dynamic Value</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LegacyID__c</fullName>
        <externalId>true</externalId>
        <label>LegacyID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recipe__c</fullName>
        <label>Recipe</label>
        <referenceTo>Recipe__c</referenceTo>
        <relationshipLabel>Recipe Attributes</relationshipLabel>
        <relationshipName>Recipe_Attributes</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Recipe Attribute</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Recipe__c</columns>
        <columns>Attribute__c</columns>
        <columns>Attribute_Value__c</columns>
        <columns>NAME</columns>
        <columns>Dynamic_Value__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <columns>NAME</columns>
        <columns>Attribute__c</columns>
        <columns>Recipe__c</columns>
        <columns>Dynamic_Value__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>DynamicAttributes</fullName>
        <booleanFilter>1 OR 2 OR 3 OR 4</booleanFilter>
        <columns>NAME</columns>
        <columns>Attribute__c</columns>
        <columns>Dynamic_Value__c</columns>
        <columns>Attribute_Value__c</columns>
        <columns>Recipe__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Attribute__c</field>
            <operation>contains</operation>
            <value>1792</value>
        </filters>
        <filters>
            <field>Attribute__c</field>
            <operation>contains</operation>
            <value>1793</value>
        </filters>
        <filters>
            <field>Attribute__c</field>
            <operation>contains</operation>
            <value>1794</value>
        </filters>
        <filters>
            <field>Attribute__c</field>
            <operation>contains</operation>
            <value>1817</value>
        </filters>
        <label>DynamicAttributes</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>RATTR-{0000}</displayFormat>
        <label>Recipe Attribute ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Recipe Attributes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>